<resources>

    <string name="app_name">Afluente</string>
    <string name="comecar">Começar</string>
    <string name="email">Digite seu e-mail</string>
    <string name="senha">Digite sua senha</string>
    <string name="esquecisenha">Esqueci minha senha</string>
    <string name="entrar">Entrar</string>
    <string name="criarumaconta">Criar uma conta</string>
    <string name="nomecompleto">Digite seu nome completo</string>
    <string name="confirmarsenha">Confirme sua senha</string>
    <string name="subtitulo">CONSUMO INTELIGENTE</string>
    <string name="rodape">Tecnologia sustentável para um futuro melhor</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="subtitulo_login">Acesse sua conta para continuar</string>
    <string name="label_email">E-MAIL</string>
    <string name="label_senha">SENHA</string>
    <string name="ou_continue_com">ou continue com</string>
    <string name="google">Google</string>
    <string name="microsoft">Microsoft</string>

</resources>