<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:contentDescription="Logo Afluente"
        android:src="@drawable/afluentetitulo"
        app:layout_constraintBottom_toTopOf="@id/txtSubtitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.15"
        android:text="@string/subtitulo"
        android:textColor="#BFC8D8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/rodape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rodape"
        android:textColor="#7D9BC7"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="18dp"
        />

    <Button
        android:id="@+id/btnComecar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/comecar"
        android:textColor="#1F3D68"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        app:backgroundTint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>